--- a/config/voidislandcontrol.cfg
+++ b/config/voidislandcontrol.cfg
@@ -57,7 +57,7 @@ general {
         B:allowIslandCreation=true
 
         # Automatically give new players islands
-        B:autoCreate=true
+        B:autoCreate=false
 
         # Type of block to spawn under islands
         # Valid values:
