disabked placed items

--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -323,7 +323,7 @@ World {
         B:invis_e_core_block=true
         B:item_dislocation_inhibitor=true
         B:particle_generator=true
-        B:placed_item=true
+        B:placed_item=false
         B:portal=true
         B:potentiometer=true
         B:rain_sensor=true
